ros2_ws3/log/build_2023-06-29_09-54-21/lane_detector/stderr.log
  File "/home/pradeshi/ros2_ws3/install/lane_detector/lib/python3.10/site-packages/lane_detector/camera_publisher.py", line 21
    else 
         ^
SyntaxError: expected ':'

